deploy: 20b1787de38dc6c631872a827de538fbda2b598e

--- a/index.html
+++ b/index.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html><html><head>
-    <meta charset="utf-8">
-    <title>BMI calculator</title>
-    <link rel="stylesheet" href="/index-84a204156f9510f5.css" integrity="sha384-O9hcSIa3s8T19cdQlgns5o6nhWR7vz3MG-bl9SXMj_7VV8YKjfiMsKK37irhTvsf"> 
-    <link rel="stylesheet" href="/tailwind-2224d7acf72b9275.css" integrity="sha384-agpVM6OyUk4VZnFLejlzno5w9j-dg2zEOYKfUxCQk4a2jZOB40JvR8iXr4s8iGkV">
-    
-    <link rel="icon" href="/favicon-32x32-ae8057170b9313c.png" integrity="sha384-1pxkNB-jumByKxjEv539jS4ZC790yrVCYcr1yjvQ2yaANvHkDD60qLBCOPRWAk0H">
-  
-<link rel="preload" href="/bmi-calculator-e77ead0baeccb66b4c6fdfdad097a1f09700909eff58103ef6e2cc63ae7a44c78dda666c31c73d8f4eb6f5056b5b4386_bg.wasm" as="fetch" type="application/wasm" crossorigin="anonymous" integrity="sha384-536tC67MtmtMb9_a0Jeh8JcAkJ7_WBA-9uLMY656RMeN2mZsMcc9j0629QVrW0OG">
-<link rel="modulepreload" href="/bmi-calculator-e77ead0baeccb66b4c6fdfdad097a1f09700909eff58103ef6e2cc63ae7a44c78dda666c31c73d8f4eb6f5056b5b4386.js" crossorigin="anonymous" integrity="sha384-Mumhz0qsn8XuLRxH_ouhB7a25WSLkWQW1-EowqzCQ1udLTf0c4gHSbafubP703o8"></head>  
-<body>
-
-<script type="module">
-import init, * as bindings from '/bmi-calculator-e77ead0baeccb66b4c6fdfdad097a1f09700909eff58103ef6e2cc63ae7a44c78dda666c31c73d8f4eb6f5056b5b4386.js';
-init('/bmi-calculator-e77ead0baeccb66b4c6fdfdad097a1f09700909eff58103ef6e2cc63ae7a44c78dda666c31c73d8f4eb6f5056b5b4386_bg.wasm');
+<!doctype html><meta charset=utf-8><title>BMI calculator</title><link href=/index-35176160e9c982e9.css integrity=sha384-bT4BKtzGeTWmWZFepdfOVhuH-RmC3JdhOHCEmLBJAHiSX9OAfONp_5lkBSIV499U rel=stylesheet><link href=/tailwind-d3e4dd71631cc0f8.css integrity=sha384-wyUj_Bnfnh03ubBguGoJk_E-fiEYfEk5UVJrMFpMGcRDluCDN-q_lPu2yu58Vcf_ rel=stylesheet><link href=/favicon-32x32-ae8057170b9313c.png integrity=sha384-1pxkNB-jumByKxjEv539jS4ZC790yrVCYcr1yjvQ2yaANvHkDD60qLBCOPRWAk0H rel=icon><link as=fetch crossorigin href=/bmi-calculator-3674a598be89285d_bg.wasm integrity=sha384-uQFHrRMlkdSqXTvliwwJZgK_TBaXe3yMvO8GWx8aK_shNFTz27sQulsDHJafvJDE rel=preload type=application/wasm><link crossorigin href=/bmi-calculator-3674a598be89285d.js integrity=sha384-fEI2C_yDu1rAOFXLZaABSAJvN6fFlk-j5Pc8m1v2kRdoEgTzBUrt4XjQvwl4SpqY rel=modulepreload></head><body><script type=module>
+import init, * as bindings from '/bmi-calculator-3674a598be89285d.js';
+init('/bmi-calculator-3674a598be89285d_bg.wasm');
 window.wasmBindings = bindings;
 
 </script></body></html>
